--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -66,7 +66,12 @@
   }
 
   &--contact {
-    padding: 10px 20px;
+    padding: 1.5rem 3rem;
+    border: none;
+  }
+
+  &--nav {
+    padding: 2rem 5rem;
     border: none;
   }
 }
