--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,9 +1,8 @@
 .section-about {
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
-  background-color: #f7f7f7;
-  box-shadow: 0 0.5rem 0.5rem rgba($color-black, 0.1);
-  padding: 6rem 0.5rem;
+  background-color: $color-grey-light-1;
+  padding: 1.5rem 0.5rem;
 
   @include respond(tab-port) {
     padding: 15rem 0;
