--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,7 +16,8 @@
 }
 
 .section-contact {
-  margin: 15rem 0;
+  margin: 5rem 0;
+  padding: 1.5rem 0.5rem;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.8),
@@ -28,7 +29,8 @@
 }
 
 .contact {
-  width: 100%;
+  margin: 0 auto;
+  width: 95%;
   background-image: linear-gradient(
       105deg,
       rgba($color-white, 0.9) 0%,
